--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "@types/node": "^22.15.29",
     "@types/react": "^19.1.6",
     "bcryptjs": "^3.0.2",
+    "chart.js": "^4.4.9",
     "jsonwebtoken": "^9.0.2",
     "next": "^15.3.3",
     "prisma": "^6.9.0",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
     "typescript": "^5.8.3",
@@ -21,9 +23,8 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.10",
-    "@tailwindcss/postcss": "^4.1.8",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.4",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^3.4.15"
   }
 }
