--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "chart.js": "^4.4.9",
     "jsonwebtoken": "^9.0.2",
     "next": "^15.3.3",
+    "nookies": "^2.5.2",
     "prisma": "^6.9.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.3.0",
